--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ httpx==0.24.1
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
+joblib==1.2.0
 MarkupSafe==2.1.3
 numpy==1.24.3
 orjson==3.9.0
@@ -24,11 +25,13 @@ python-dotenv==1.0.0
 python-multipart==0.0.6
 pytz==2023.3
 PyYAML==6.0
+scikit-learn==1.2.2
 scipy==1.10.1
 six==1.16.0
 sniffio==1.3.0
 starlette==0.27.0
 statsmodels==0.14.0
+threadpoolctl==3.1.0
 typing_extensions==4.6.3
 tzdata==2023.3
 ujson==5.7.0
